use botocore_paste package

--- a/example.ini
+++ b/example.ini
@@ -21,21 +21,21 @@ protocol_dump = false
 #
 # Receive Message params
 #
-#max_number_of_messages = 10
-#visibility_timeout = 600
-#wait_time_seconds = 20
+#sqs.max_number_of_messages = 10
+#sqs.visibility_timeout = 600
+#sqs.wait_time_seconds = 20
 
 #
 # Connection params
 #
-#profile =
-#credentials_file = ~/.aws/credentials
-#config_file = ~/.aws/config
-#metadata_service_num_attempts = 1
-#provider = aws
-#region =
-#data_path =
-#metadata_service_timeout = 1
+#botocore.profile =
+#botocore.credentials_file = ~/.aws/credentials
+#botocore.config_file = ~/.aws/config
+#botocore.metadata_service_num_attempts = 1
+#botocore.provider = aws
+#botocore.region =
+#botocore.data_path =
+#botocore.metadata_service_timeout = 1
 
 ###
 # logging configuration
