--- a/example.ini
+++ b/example.ini
@@ -4,38 +4,28 @@
 ###
 
 [app:main]
-use = egg:sqs_consumer#example
+use = egg:your.paste.app_factory.registered.package#callable
 
-key_name = key
 
 ###
 # wsgi server configuration
 ###
 
 [server:main]
-use = egg:sqs_consumer#runworker
+use = egg:sqs_consumer#server_runner
 
-queue_name = mytestqueue
-protocol_dump = false
+transport.botocore.queue_name = mytestqueue
 
-#
 # Receive Message params
-#
-#sqs.max_number_of_messages = 10
-#sqs.visibility_timeout = 600
-#sqs.wait_time_seconds = 20
+;transport.botocore.max_number_of_messages = 1
+;transport.botocore.visibility_timeout = 0
+;transport.botocore.wait_time_seconds = 20
 
-#
-# Connection params
-#
-#botocore.profile =
-#botocore.credentials_file = ~/.aws/credentials
-#botocore.config_file = ~/.aws/config
-#botocore.metadata_service_num_attempts = 1
-#botocore.provider = aws
-#botocore.region =
-#botocore.data_path =
-#botocore.metadata_service_timeout = 1
+# Session params
+;transport.botocore.session_vars.profile = profile_name
+;transport.botocore.session_vars.config_file = /path/to/aws/config
+;transport.botocore.session_vars.credentials_file = /path/to/aws/credentials
+
 
 ###
 # logging configuration
